img alt angepasst

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
-          <img src="images/archi4.jpg" alt="Haus" />
+          <img src="images/archi4.jpg" alt="Palau de les Arts Reina Sofia" />
           <figcaption>
             <h2>Palau de les Arts Reina Sofia Valencia</h2>
             <p>Modernisierung<br>
@@ -83,7 +83,7 @@
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
-          <img src="images/archi5.jpg" alt="Haus" />
+          <img src="images/archi5.jpg" alt="Goethe Universität" />
           <figcaption>
             <h2>Goethe Universität Frankfurt</h2>
             <p>Modernisierung<br>
