--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
 <head>
-  <title>HFW Architekten</title>
+  <title>HWF Architekten</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="stylesheet.css" rel="stylesheet">
@@ -167,12 +167,12 @@
     <div class="container " id="Kontakt">
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
-        <p>HFW Architekten<br>
+        <p>HWF Architektur<br>
             Rheingaustraße 140<br>
             65203 Wiesbaden<br>
             Tel.: 0611 - 12 34 56 - 0<br>
             Fax: 0611 - 56 34 12 - 10<br>
-            E-Mail: <a href="mailto:architekten@hfw.de">architekten@hfw.de</a></p>
+            E-Mail: <a href="mailto:architektur@hwf.de">architektur@hwf.de</a></p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.238908785474!2d8.221875630936767!3d50.040600324601535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960d1b00407f%3A0x652e94e96b5777b8!2sSchloss+Biebrich!5e0!3m2!1sde!2sde!4v1541119845137" allowfullscreen></iframe>
       </div>
     </div>
@@ -293,12 +293,12 @@
       <h3 class="mitte">Impressum</h3>
       <div class="impressum nichtbreiter">
         <div class="drittel">
-          <h4>HFW Architekten</h4>
+          <h4>HWF Architektur GmbH</h4>
           <p>Rheingaustraße 140<br>
           65203 Wiesbaden<br>
           Tel.: 0611 - 12 34 56 - 0<br>
           Fax: 0611 - 56 34 12 - 10<br>
-          <a href=mailto:"architekten@hfw.de">architekten@hfw.de</a></p>
+          <a href=mailto:"architektur@hwf.de">architektur@hwf.de</a></p>
         </div>
         <div class="drittel">
           <h4>Geschäftsführung</h4>
