--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img id="HWFLogo"src="images/Logo_neu_Schrift_weiß.png" alt="Logo">
         <!--Menü-->
         <img id="menubutton" src="images/menu.png" alt="menubutton">
-      <navbar id=Menü>
+      <navbar id="Menü">
         <ul>
           <li><a href="#Slider">Start</a></li>
           <li><a href="#Referenzen">Referenzen</a></li>
