--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
   <title>HWF Architekten</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link href="stylesheet.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script language="javascript" type="text/javascript" src="script.js"></script>
-  
-  
-  
-  
-  
-  
-  
 </head>
-
-
-
 
 <body>
   <header id="Header">
@@ -44,9 +36,9 @@
   </header>
   <main>
     <div id="Slider">
-	
-	
-	
+
+
+
     </div>
     <div class="container" id="Referenzen">
       <h2>Referenzen</h2>
