--- a/index.html
+++ b/index.html
@@ -36,9 +36,20 @@
   </header>
   <main>
     <div id="Slider">
-
-
-
+      <div class="slider single-item">
+				<div>
+					<h3>1</h3>
+          <img src="">
+				</div>
+				<div>
+					<h3>2</h3>
+          <img src="">
+				</div>
+				<div>
+					<h3>3</h3>
+          <img src="">
+				</div>
+			</div>
     </div>
     <div class="container" id="Referenzen">
       <h2>Referenzen</h2>
