--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <title>HWF Architekten</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="stylesheet.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
   <script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
 
@@ -36,18 +37,15 @@
   </header>
   <main>
     <div id="Slider">
-      <div class="slider single-item">
+      <div class="slider single-item autoplay">
 				<div>
-					<h3>1</h3>
-          <img src="">
+          <img src="images/slider1.jpg">
 				</div>
 				<div>
-					<h3>2</h3>
-          <img src="">
+          <img src="images/slider2.jpg">
 				</div>
 				<div>
-					<h3>3</h3>
-          <img src="">
+          <img src="images/slider3.jpg">
 				</div>
 			</div>
     </div>
