--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
 
+
+
 <body>
+
+
   <header id="Header">
     <div class="headerinhalt nichtbreiter">
         <img id="HWFLogo"src="images/Logo_neu_Schrift_weiß.png" alt="Logo">
@@ -31,11 +35,15 @@
           <li><a href="#Kontakt">Kontakt</a></li>
           <li><a href="#Karriere">Karriere</a></li>
           <li><a href="#Impressum">Impressum</a></li>
-      </ul>
+        </ul>
       </navbar>
     </div>
+	
+	
   </header>
   <main>
+  
+ <!-- ---------------------------------------------------SLIDER-------------------------------------  -->	 
     <div id="Slider">
       <div class="slider single-item autoplay">
 				<div>
@@ -46,12 +54,14 @@
 				</div>
 				<div>
           <img src="images/slider3.jpg">
-				</div>
-			</div>
-    </div>
-    <div class="container" id="Referenzen">
-      <h2>Referenzen</h2>
-      <div class="banner">
+	  </div>
+	</div>
+			
+<!-- ---------------------------------------------------REFERENZEN-------------------------------------  -->				
+    </div><!--class="container" - rausgenommen-->
+    <div  id="Referenzen">
+      <div class="banner">      
+	  <h2>Referenzen</h2>
         <div class="logos nichtbreiter">
           <div class="logo"><a href="http://www.uni-frankfurt.de/de?locale=de" target="_blank"><img src="images/ref6.png" alt="Goethe Universität"></a></div>
           <div class="logo"><a href="https://www.lesarts.com/" target="_blank"><img src="images/ref5.png" alt="Stadt Valencia"></a></div>
@@ -62,59 +72,63 @@
         </div>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------PORTFOLIO-------------------------------------  -->		
     <div class="container" id="Portfolio">
       <h2>Portfolio</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle portfolio">
           <img src="images/archi1.jpg" alt="EYE Film Instituut Nederland" />
           <figcaption>
-            <h2>Eye Film Instituut Nederland Amsterdam</h2>
-            <p>Neubau und Modernisierung<br>
+            <h3>Eye Film Instituut Nederland Amsterdam</h3>
+            <p><br><br>Neubau und Modernisierung<br>
               Planung und Realisierung: 2018 </p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi2.jpg" alt="Hyundai" />
           <figcaption>
-            <h2>Hyundai Frankfurt</h2>
-            <p>Neubau Bürogebäude<br>
+            <h3>Hyundai Frankfurt</h3>
+            <p><br><br>Neubau Bürogebäude<br>
               Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi3.jpg" alt="Hyundai" />
           <figcaption>
-            <h2>Hyundai Frankfurt</h2>
-            <p>Neubau Bürogebäude<br>
+            <h3>Hyundai Frankfurt</h3>
+            <p><br><br>Neubau Bürogebäude<br>
               Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi4.jpg" alt="Palau de les Arts Reina Sofia" />
           <figcaption>
-            <h2>Palau de les Arts Reina Sofia Valencia</h2>
-            <p>Modernisierung<br>
+            <h3>Palau de les Arts Reina Sofia Valencia</h3>
+            <p><br><br>Modernisierung<br>
               Planung und Realisierung: 2017</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi5.jpg" alt="Goethe Universität" />
           <figcaption>
-            <h2>Goethe Universität Frankfurt</h2>
-            <p>Modernisierung<br>
+            <h3>Goethe Universität Frankfurt</h3>
+            <p><br><br>Modernisierung<br>
               Planung und Realisierung: 2017</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi6.jpg" alt="NEMO Museum" />
           <figcaption>
-            <h2>NEMO Museum Amsterdam</h2>
-            <p>Umbau<br>
+            <h3>NEMO Museum Amsterdam</h3>
+            <p><br><br>Umbau<br>
               Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------LEISTUNGEN-------------------------------------  -->		
     <div class="container" id="Leistungen">
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
@@ -161,31 +175,39 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 			</ul>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------PARTNER-------------------------------------  -->	
     <div class="container" id="Partner">
-      <h2>Partner</h2>
-      <div class="banner">
-        <div class="logos nichtbreiter">
-          <div class="logo"><a href="https://www.deutsche-bank.de/gk.html" target="_blank"><img src="./images/partner4.png" alt="Deutsche Bank"></a></div>
-          <div class="logo"><a href="http://gass-immobilien.de/" target="_blank"><img src="./images/partner1.png" alt="Gass Immobilien"></a></div>
+      <div class="banner">  
+		<h2>Partner</h2>
+	     <div class="logos nichtbreiter">
+		  <div class="logo"><a href="https://www.deutsche-bank.de/gk.html" target="_blank"><img src="./images/partner4.png" alt="Deutsche Bank"></a></div>
+		  <div class="logo"><a href="http://gass-immobilien.de/" target="_blank"><img src="./images/partner1.png" alt="Gass Immobilien"></a></div>
           <div class="logo"><a href="https://www.galabau.de/" target="_blank"><img src="./images/partner3.png" alt="Galabau"></a></div>
-        </div>
+		 </div>
       </div>
     </div>
-    <div class="container" id="Philosophie">
-      <h2>Philosophie</h2>
-      <div class="nichtbreiter">
-        <p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
-        <p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.</p>
-      </div>
-    </div>
+	
+<!-- -------------------------------------------------PHILOSOPHIE-------------------------------------  -->		
+	<div class="parallax">
+		<div class="container" id="Philosophie">
+		  <h2>Philosophie</h2>
+		  <div class="nichtbreiter">
+			<p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
+			<p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.</p>
+		  </div>
+		</div>
+	</div>	
+	
+<!-- ---------------------------------------------------TEAM-------------------------------------  -->			
     <div class="container" id="Team">
       <h2>Team</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle team">
           <img src="images/Celine_web2.jpg" alt="Celine Werner" />
           <figcaption>
-            <h2>Celine Werner</h2><br><br>
-            <p>Studium der Architektur an der Hochschule RheinMain Abschluss 2017 <br><br>
+            <h3>Celine Werner</h3><br><br>
+            <p><br><br>Studium der Architektur an der Hochschule RheinMain Abschluss 2017 <br><br>
                2 Jahre Erfahrung <br>im Planen und Bauen<br><br>
                Schwerpunkt der Arbeit: Entwurf, Bauantrag, Ausführungsplanung</p>
           </figcaption>
@@ -193,8 +215,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         <figure class="hovertitle team">
           <img src="images/Isa_web2.jpg" alt="Isabell Freund" />
           <figcaption>
-            <h2>Isabell Freund</h2><br><br>
-            <p>Innenarchitekturstudium Hochschule RheinMain<br><br>
+            <h3>Isabell Freund</h3><br><br>
+            <p><br><br>Innenarchitekturstudium Hochschule RheinMain<br><br>
                Bachelor of Arts Innenarchitektur 2017<br><br>
                Schwerpunkt der Arbeit: Innenraumkonzept, Entwurf, Detailplanung, Ausschreibung</p>
           </figcaption>
@@ -202,18 +224,20 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         <figure class="hovertitle team">
           <img src="images/Daniela_web2.jpg" alt="Daniela Hahn" />
           <figcaption>
-            <h2>Daniela Hahn</h2><br><br>
-            <p>Studium der Architektur Hochschule RheinMain<br><br>
+            <h3>Daniela Hahn</h3><br><br>
+            <p><br><br>Studium der Architektur Hochschule RheinMain<br><br>
                Bauzeichnerin seit 2015<br><br>
                Schwerpunkt der Arbeit: CAD, 3D, BIM- Technologie, Rendering, Systemadmin</p>
           </figcaption>
         </figure>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------KONTAKT-------------------------------------  -->	
     <div class="container " id="Kontakt">
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
-        <p>HWF Architektur<br>
+        <p><strong>HWF Architektur</strong><br>
             Rheingaustraße 140<br>
             65203 Wiesbaden<br>
             Tel.: 0611 - 12 34 56 - 0<br>
@@ -222,6 +246,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.238908785474!2d8.221875630936767!3d50.040600324601535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960d1b00407f%3A0x652e94e96b5777b8!2sSchloss+Biebrich!5e0!3m2!1sde!2sde!4v1541119845137" allowfullscreen></iframe>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------KARRIERE-------------------------------------  -->		
     <div class="container" id="Karriere">
       <h2>Karriere</h2>
       <div class="Jobangebote nichtbreiter">
@@ -256,9 +282,9 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 
             <strong> eine/n erfahrene/n Bauleiter/in für die Leistungsphasen 6 - 8
             </strong><br><br>
-
+			
             Wir erwarten sehr gute Fachkenntnisse, Belastbarkeit und Teamfähigkeit sowie ausreichende Berufserfahrung (mindestens 3 Jahre). <br><br>
-
+			
             <strong>Ihre Aufgaben:</strong><br>
             + Ausschreibung<br>
             + Objektüberwachung<br>
@@ -273,6 +299,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
             + fachliche und persönliche Entwicklung unserer Mitarbeiter durch Weiterbildung und ein hohes Maß an eigenverantwortlicher Tätigkeit</p>
         </details>
       </div>
+	  
+<!-- ---------------------------------------------------FORMULAR-------------------------------------  -->		  
       <div class="Bewerbungsformular nichtbreiter">
         <div class="drittel">
           <h3>Anrede:</h3>
@@ -335,6 +363,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         </div>
       </div>
     </div>
+	
+<!-- ---------------------------------------------------IMPRESSUM-------------------------------------  -->		
     <div class="container" id="Impressum">
       <h3 class="mitte">Impressum</h3>
       <div class="impressum nichtbreiter">
@@ -367,6 +397,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 	    </div>
       </div>
     </div>
+	
+	
   </main>
 </body>
 </html>
