--- a/index.html
+++ b/index.html
@@ -302,66 +302,67 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 
 <!-- ---------------------------------------------------FORMULAR-------------------------------------  -->
       <div class="Bewerbungsformular nichtbreiter">
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Anrede:</h3>
-          <select class="formularfeld " name="Anrede" required>
+          <select class="eingabefeld " name="Anrede" required>
             <option value="Herr">Herr</option>
             <option value="Frau">Frau</option>
           </select>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Vorname:</h3>
-          <input class="formularfeld" id="vorname" type="text" placeholder="Vorname" required></input>
+          <input class="eingabefeld" id="vorname" type="text" placeholder="Vorname" required></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Nachname:</h3>
-          <input class="formularfeld" id="nachname" type="text" placeholder="Nachname" required></input>
+          <input class="eingabefeld" id="nachname" type="text" placeholder="Nachname" required></input>
         </div>
-        <div class="drittel">
-          <h3>Straße und Hausnummer:</h3>
-          <input class="formularfeld" id="straße" type="text" placeholder="Straße, Nr."></input>
+        <div class="formularteil">
+          <h3>Straße und Hausnr.:</h3>
+          <input class="eingabefeld" id="straße" type="text" placeholder="Straße, Nr."></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>PLZ:</h3>
-          <input class="formularfeld" id="plz" type="text" placeholder="Postleitzahl"></input>
+          <input class="eingabefeld" id="plz" type="text" placeholder="Postleitzahl"></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Ort:</h3>
-          <input class="formularfeld" id="ort" type="text" placeholder="Ort"></input>
+          <input class="eingabefeld" id="ort" type="text" placeholder="Ort"></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Anschreiben:</h3>
           <div class="file-upload">
             <label for="anschreiben" class="file-upload__label">Datei auswählen</label>
             <input id="anschreiben" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
           </div>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Lebenslauf:</h3>
           <div class="file-upload">
             <label for="lebenslauf" class="file-upload__label">Datei auswählen</label>
             <input id="lebenslauf" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
           </div>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Weitere Unterlagen:</h3>
           <div class="file-upload">
             <label for="unterlagen" class="file-upload__label">Datei auswählen</label>
             <input id="unterlagen" class="file-upload__input" type="file" name="file-upload" accept="application/pdf">
           </div>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>E-Mail:</h3>
-          <input class="formularfeld" id="email" type="email" placeholder="E-Mail" required></input>
+          <input class="eingabefeld" id="email" type="email" placeholder="E-Mail" required></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <h3>Telefonnr.:</h3>
-          <input class="formularfeld" id="mobil" type="text" placeholder="Telefonnr."></input>
+          <input class="eingabefeld" id="mobil" type="text" placeholder="Telefonnr."></input>
         </div>
-        <div class="drittel">
+        <div class="formularteil">
           <button id="send" type="button">Senden</button>
         </div>
       </div>
+    </div>
 
 
 
@@ -369,7 +370,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     <div class="container" id="Impressum">
       <h3 class="mitte">Impressum</h3>
       <div class="impressum nichtbreiter">
-        <div class="drittel">
+        <div>
           <h4>HWF Architektur GmbH</h4>
           <p>Rheingaustraße 140<br>
           65203 Wiesbaden<br>
@@ -377,14 +378,14 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
           Fax: 0611 - 56 34 12 - 10<br>
           <a href=mailto:"architektur@hwf.de">architektur@hwf.de</a></p>
         </div>
-        <div class="drittel">
+        <div>
           <h4>Zuständige Kammer</h4>
           <p>Architektenkammer Hessen<br>
           Bierstadter Straße 2<br>
           65189 Nordost<br>
           Tel.: 0611 - 17 38 0</p>
         </div>
-        <div class="drittel">
+        <div>
           <h4>Geschäftsführung</h4>
           <p>Daniela Hahn<br>Isabell Freund<br>Celine Werner</p>
         </div>
@@ -398,7 +399,6 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 	    </div>
       </div>
     </div>
-
 
   </main>
 </body>
