Interaktion mit Formular

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
       <div class="Bewerbungsformular nichtbreiter">
         <div class="formularteil">
           <h3>Anrede:</h3>
-          <select class="eingabefeld " name="Anrede" required>
+          <select class="eingabefeld " id="anrede" name="Anrede" required>
             <option value="Herr">Herr</option>
             <option value="Frau">Frau</option>
           </select>
@@ -359,7 +359,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
           <input class="eingabefeld" id="mobil" type="text" placeholder="Telefonnr."></input>
         </div>
         <div class="formularteil">
-          <button id="send" type="button">Senden</button>
+          <input id="send" type="submit" value="Senden">
         </div>
       </div>
     </div>
