--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!Doctype HTML>
-<html>
+<html lang="de">
 <head>
   <title>HWF Architekten</title>
   <meta charset="utf-8">
@@ -11,8 +11,8 @@
   <link href="stylesheet.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script language="javascript" type="text/javascript" src="script.js"></script>
+  <script src="slick/slick.min.js"></script>
+  <script src="script.js"></script>
 </head>
 
 
@@ -45,17 +45,17 @@
   </header>
   <main>
 
- <!-- ---------------------------------------------------SLIDER-------------------------------------  -->
+ <!-- --------------------------------------------------SLIDER------------------------------------- -->
     <div id="Slider">
       <div class="slider single-item autoplay">
 				<div>
-          <img src="images/slider1.jpg">
+          <img src="images/slider1.jpg" alt="Slider 1">
 				</div>
 				<div>
-          <img src="images/slider2.jpg">
+          <img src="images/slider2.jpg" alt="Slider 2">
 				</div>
 				<div>
-          <img src="images/slider3.jpg">
+          <img src="images/slider3.jpg" alt="Slider 3">
 	  </div>
 	</div>
 
@@ -313,29 +313,29 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         <div class="formularteil">
           <h3>Anrede:</h3>
           <select class="eingabefeld " id="anrede" name="Anrede" required>
-            <option value="Herr">Herr</option>
+            <option value="">Herr</option>
             <option value="Frau">Frau</option>
           </select>
         </div>
         <div class="formularteil">
           <h3>Vorname:</h3>
-          <input class="eingabefeld" id="vorname" type="text" placeholder="Vorname" required></input>
+          <input class="eingabefeld" id="vorname" type="text" placeholder="Vorname" required>
         </div>
         <div class="formularteil">
           <h3>Nachname:</h3>
-          <input class="eingabefeld" id="nachname" type="text" placeholder="Nachname" required></input>
+          <input class="eingabefeld" id="nachname" type="text" placeholder="Nachname" required>
         </div>
         <div class="formularteil">
           <h3>Straße und Hausnr.:</h3>
-          <input class="eingabefeld" id="straße" type="text" placeholder="Straße, Nr."></input>
+          <input class="eingabefeld" id="straße" type="text" placeholder="Straße, Nr.">
         </div>
         <div class="formularteil">
           <h3>PLZ:</h3>
-          <input class="eingabefeld" id="plz" type="text" placeholder="Postleitzahl"></input>
+          <input class="eingabefeld" id="plz" type="text" placeholder="Postleitzahl">
         </div>
         <div class="formularteil">
           <h3>Ort:</h3>
-          <input class="eingabefeld" id="ort" type="text" placeholder="Ort"></input>
+          <input class="eingabefeld" id="ort" type="text" placeholder="Ort">
         </div>
         <div class="formularteil">
           <h3>Anschreiben:</h3>
@@ -360,11 +360,11 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         </div>
         <div class="formularteil">
           <h3>E-Mail:</h3>
-          <input class="eingabefeld" id="email" type="email" placeholder="E-Mail" required></input>
+          <input class="eingabefeld" id="email" type="email" placeholder="E-Mail" required>
         </div>
         <div class="formularteil">
           <h3>Telefonnr.:</h3>
-          <input class="eingabefeld" id="mobil" type="text" placeholder="Telefonnr."></input>
+          <input class="eingabefeld" id="mobil" type="text" placeholder="Telefonnr.">
         </div>
         <div class="formularteil">
           <input id="send" type="submit" value="Senden">
@@ -384,7 +384,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
           65203 Wiesbaden<br>
           Tel.: 0611 - 12 34 56 - 0<br>
           Fax: 0611 - 56 34 12 - 10<br>
-          <a href=mailto:"architektur@hwf.de">architektur@hwf.de</a></p>
+          <a href="mailto:architektur@hwf.de">architektur@hwf.de</a></p>
         </div>
         <div>
           <h4>Zuständige Kammer</h4>
