--- a/index.html
+++ b/index.html
@@ -56,21 +56,31 @@
 				</div>
 				<div>
           <img src="images/slider3.jpg">
-	  </div>
-	</div>
-
+	      </div>
+	     </div>
+     </div>
 <!-- ---------------------------------------------------REFERENZEN-------------------------------------  -->
-    </div><!--class="container" - rausgenommen-->
+<!--class="container" - rausgenommen-->
     <div  id="Referenzen">
       <div class="banner">
-	  <h2>Referenzen</h2>
-        <div class="logos nichtbreiter">
+	      <h2>Referenzen</h2>
+        <div class="logos nichtbreiter referenzen">
           <div class="logo"><a href="http://www.uni-frankfurt.de/de?locale=de" target="_blank"><img src="images/ref6.png" alt="Goethe Universität"></a></div>
           <div class="logo"><a href="https://www.lesarts.com/" target="_blank"><img src="images/ref5.png" alt="Stadt Valencia"></a></div>
           <div class="logo"><a href="https://www.hyundai.de/" target="_blank"><img src="images/ref4.png" alt="Hyundai"></a></div>
           <div class="logo"><a href="https://www.lesarts.com/" target="_blank"><img src="images/ref3.png" alt="Nemo Science Museum"></a></div>
           <div class="logo"><a href="https://www.montpellier.fr/570-hotel-de-ville.htm" target="_blank"><img src="images/ref2.png" alt="Montpellier"></a></div>
           <div class="logo"><a href="https://www.eyefilm.nl/" target="_blank"><img src="images/REF1.png" alt="Eye Film Instituut Nederland"></a></div>
+        </div>
+        <div id="Slider2">
+          <div class="slider single-item autoplay2">
+            <div class="logo"><a href="http://www.uni-frankfurt.de/de?locale=de" target="_blank"><img src="images/ref6.png" alt="Goethe Universität"></a></div>
+            <div class="logo"><a href="https://www.lesarts.com/" target="_blank"><img src="images/ref5.png" alt="Stadt Valencia"></a></div>
+            <div class="logo"><a href="https://www.hyundai.de/" target="_blank"><img src="images/ref4.png" alt="Hyundai"></a></div>
+            <div class="logo"><a href="https://www.lesarts.com/" target="_blank"><img src="images/ref3.png" alt="Nemo Science Museum"></a></div>
+            <div class="logo"><a href="https://www.montpellier.fr/570-hotel-de-ville.htm" target="_blank"><img src="images/ref2.png" alt="Montpellier"></a></div>
+            <div class="logo"><a href="https://www.eyefilm.nl/" target="_blank"><img src="images/REF1.png" alt="Eye Film Instituut Nederland"></a></div>
+          </div>
         </div>
       </div>
     </div>
@@ -251,7 +261,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
             <a href="https://www.facebook.com/HWF-Architektur-309949513173686/" target="_blank"><img src="https://vignette.wikia.nocookie.net/harrypotter/images/9/9d/FB_Button-_modern%2C_klein%2C_abgerundet%2C_transparent.png/revision/latest?cb=20140615114432&path-prefix=de" alt="Facebook"></a>
           </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.238908785474!2d8.221875630936767!3d50.040600324601535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960d1b00407f%3A0x652e94e96b5777b8!2sSchloss+Biebrich!5e0!3m2!1sde!2sde!4v1541119845137" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.6094313332474!2d8.231908515248568!3d50.03741392492121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960ce3b8491b%3A0x3832e45b1d38849d!2sRheingaustra%C3%9Fe+140%2C+65203+Wiesbaden!5e0!3m2!1sde!2sde!4v1542622685576" allowfullscreen></iframe>
       </div>
     </div>
 
