scrollspy anfang und burgermenü

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <main>
 
  <!-- --------------------------------------------------SLIDER------------------------------------- -->
-    <div id="Slider">
+    <div id="Slider" class="scrollspy">
       <div class="slider single-item autoplay">
 				<div>
           <img src="images/slider1.jpg" alt="Slider 1">
@@ -61,7 +61,7 @@
 
 <!-- ---------------------------------------------------REFERENZEN-------------------------------------  -->
 <!--class="container" - rausgenommen-->
-    <div  id="Referenzen">
+    <div  id="Referenzen" class="scrollspy">
       <div class="banner">
 	      <h2>Referenzen</h2>
         <div class="logos nichtbreiter referenzen">
@@ -86,7 +86,7 @@
     </div>
 
 <!-- ---------------------------------------------------PORTFOLIO-------------------------------------  -->
-    <div class="container" id="Portfolio">
+    <div class="container scrollspy" id="Portfolio">
       <h2>Portfolio</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle portfolio">
@@ -141,7 +141,7 @@
     </div>
 
 <!-- ---------------------------------------------------LEISTUNGEN-------------------------------------  -->
-    <div class="container" id="Leistungen">
+    <div class="container scrollspy" id="Leistungen" >
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
 
@@ -189,7 +189,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------PARTNER-------------------------------------  -->
-    <div class="container" id="Partner">
+    <div class="container scrollspy" id="Partner">
       <div class="banner">
 		<h2>Partner</h2>
 	     <div class="logos nichtbreiter">
@@ -202,7 +202,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 
 <!-- -------------------------------------------------PHILOSOPHIE-------------------------------------  -->
 	<div class="parallax">
-		<div class="container" id="Philosophie">
+		<div class="container scrollspy" id="Philosophie">
 		  <h2>Philosophie</h2>
 		  <div class="nichtbreiter">
 			<p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
@@ -212,7 +212,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 	</div>
 
 <!-- ---------------------------------------------------TEAM-------------------------------------  -->
-    <div class="container" id="Team">
+    <div class="container scrollspy" id="Team">
       <h2>Team</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle team">
@@ -246,7 +246,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------KONTAKT-------------------------------------  -->
-    <div class="container " id="Kontakt">
+    <div class="container scrollspy" id="Kontakt">
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
         <div>
@@ -266,7 +266,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------KARRIERE-------------------------------------  -->
-    <div class="container" id="Karriere">
+    <div class="container scrollspy" id="Karriere">
       <h2>Karriere</h2>
       <div class="Jobangebote nichtbreiter">
         <details>
@@ -385,7 +385,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 
 
 <!-- ---------------------------------------------------IMPRESSUM-------------------------------------  -->
-    <div class="container" id="Impressum">
+    <div class="container scrollspy" id="Impressum">
       <h3 class="mitte">Impressum</h3>
       <div class="impressum nichtbreiter">
         <div>
