--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img id="menubutton" src="images/menu.png" alt="menubutton">
       <navbar id="Menü">
         <ul>
-          <li><a href="#Slider">Start</a></li>
+          <li><a href="#Slider" class="active">Start</a></li>
           <li><a href="#Referenzen">Referenzen</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Leistungen">Leistungen</a></li>
