--- a/index.html
+++ b/index.html
@@ -189,20 +189,26 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------PARTNER-------------------------------------  -->
-    <div class="container" id="Partner">
-      <div class="banner">
+  <div class="parallax-blur"> 
+	<!--class="container" rausgenommen-->
+	<div id="Partner">
+	<!--  <div class="parallax"> </div>-->
+	  <div class="banner">
 		<h2>Partner</h2>
-	     <div class="logos nichtbreiter">
+		 <div class="logos nichtbreiter">
 		  <div class="logo"><a href="https://www.deutsche-bank.de/gk.html" target="_blank"><img src="./images/partner4.png" alt="Deutsche Bank"></a></div>
 		  <div class="logo"><a href="http://gass-immobilien.de/" target="_blank"><img src="./images/partner1.png" alt="Gass Immobilien"></a></div>
-          <div class="logo"><a href="https://www.galabau.de/" target="_blank"><img src="./images/partner3.png" alt="Galabau"></a></div>
+		  <div class="logo"><a href="https://www.galabau.de/" target="_blank"><img src="./images/partner3.png" alt="Galabau"></a></div>
 		 </div>
-      </div>
-    </div>
+	  </div>
+	</div>	
+ </div>
 
 <!-- -------------------------------------------------PHILOSOPHIE-------------------------------------  -->
-	<div class="parallax">
-		<div class="container" id="Philosophie">
+	<!--class="container" rausgenommen-->
+	<!--<div class="parallax"> </div>-->
+	<div class="parallax-blur">
+		<div id="Philosophie">
 		  <h2>Philosophie</h2>
 		  <div class="nichtbreiter">
 			<p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
@@ -210,7 +216,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 		  </div>
 		</div>
 	</div>
-
+	<!--<div class="parallax"> </div>-->
 <!-- ---------------------------------------------------TEAM-------------------------------------  -->
     <div class="container" id="Team">
       <h2>Team</h2>
@@ -246,7 +252,9 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------KONTAKT-------------------------------------  -->
-    <div class="container " id="Kontakt">
+
+	<div class="container " id="Kontakt">
+	 <div class="parallax-map-blur">
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
         <div>
@@ -263,6 +271,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.6094313332474!2d8.231908515248568!3d50.03741392492121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960ce3b8491b%3A0x3832e45b1d38849d!2sRheingaustra%C3%9Fe+140%2C+65203+Wiesbaden!5e0!3m2!1sde!2sde!4v1542622685576" allowfullscreen></iframe>
       </div>
+	 </div> 
     </div>
 
 <!-- ---------------------------------------------------KARRIERE-------------------------------------  -->
