--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
     </div>
 
 <!-- ---------------------------------------------------PARTNER-------------------------------------  -->
-  <div class="parallax-blur">
+    <div class="parallax-blur">
 	<!--class="container" rausgenommen-->
 	<div class="scrollspy" id="Partner">
 	<!--  <div class="parallax"> </div>-->
@@ -202,13 +202,13 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 		 </div>
 	  </div>
 	</div>
- </div>
+    </div>
 
 <!-- -------------------------------------------------PHILOSOPHIE-------------------------------------  -->
 	<!--class="container" rausgenommen-->
 	<!--<div class="parallax"> </div>-->
-	<div class="parallax-blur">
-		<div class="scrollspy" id="Philosophie">
+	<div class="parallax-blur-short">
+		<div class="scrollspy" id="Philosophie">	
 		  <h2>Philosophie</h2>
 		  <div class="nichtbreiter">
 			<p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
