versuch eines scrachpads

--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
     <div class="container scrollspy" id="Leistungen" >
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
-
+      <!--<div class="canvascontainer" id="js-container">
+          <canvas class="canvas" id="js-canvas"></canvas>
+          <form class="form" style="visibility: hidden;">
+            <img src="images/nachher-gross.jpg" alt="Nachher">
+          </form>
+      </div>-->
+      
  <!-- vorher nachher bild
  blur?
  css
@@ -208,7 +214,7 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 	<!--class="container" rausgenommen-->
 	<!--<div class="parallax"> </div>-->
 	<div class="parallax-blur-short">
-		<div class="scrollspy" id="Philosophie">	
+		<div class="scrollspy" id="Philosophie">
 		  <h2>Philosophie</h2>
 		  <div class="nichtbreiter">
 			<p> Unser Ziel ist es, nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
@@ -265,8 +271,8 @@ https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
             Fax: 0611 - 56 34 12 - 10<br>
             E-Mail: <a href="mailto:architektur@hwf.de">architektur@hwf.de</a></p>
           <div class="socialmedia">
-            <a href="https://www.instagram.com/hwf_architektur/?hl=de" target="_blank"><img src="images/fb-logo.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/HWF-Architektur-309949513173686/" target="_blank"><img src="images/insta-logo.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/hwf_architektur/?hl=de" target="_blank"><img src="images/insta-logo.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/HWF-Architektur-309949513173686/" target="_blank"><img src="images/fb-logo.png" alt="Facebook"></a>
           </div>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.6094313332474!2d8.231908515248568!3d50.03741392492121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960ce3b8491b%3A0x3832e45b1d38849d!2sRheingaustra%C3%9Fe+140%2C+65203+Wiesbaden!5e0!3m2!1sde!2sde!4v1542622685576" allowfullscreen></iframe>
