--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <div class="container scrollspy" id="Leistungen" >
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
+        <img src="images/nachher-gross.jpg">
  <!-- vorher nachher bild
  blur?
  css
@@ -173,16 +174,18 @@ oder
 https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
 
  -->
-			<p>Wir bieten das komplette Spektrum der klassischen Architektenleistungen aller Leistungsphasen der HOAI.<br>Diese umfassen:</p>
-			<ul>
-			  <li>Entwurf</li>
-			  <li>Planung</li>
-			  <li>Bauleitung</li>
-			  <li>Brandschutz</li>
-			  <li>Bauen im Bestand</li>
-			  <li>Energetische Sanierung</li>
-			  <li>Projektentwicklung</li>
-			</ul>
+        <span class="leistungstext">
+          <p>Wir bieten das komplette Spektrum der klassischen Architektenleistungen aller Leistungsphasen der HOAI.<br>Diese umfassen:</p>
+    			<ul>
+    			  <li>Entwurf</li>
+    			  <li>Planung</li>
+    			  <li>Bauleitung</li>
+    			  <li>Brandschutz</li>
+    			  <li>Bauen im Bestand</li>
+    			  <li>Energetische Sanierung</li>
+    			  <li>Projektentwicklung</li>
+    			</ul>
+        </span>
       </div>
     </div>
 
