--- a/index.html
+++ b/index.html
@@ -143,12 +143,7 @@
     <div class="container scrollspy" id="Leistungen" >
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
-		<div ID="bildgroesse"> <!--codepen code-->
-			<div class="before-and-after"><img class="subject-before" src="./images/vorher-klein.jpg"/>
-			  <div class="subject-scraper"><img class="subject-after" src="./images/nachher-klein.jpg"/>
-			  </div>
-			</div>
-
+		<img src="./images/nachher-klein.jpg">
 			<span class="leistungstext">
 			  <p>Wir bieten das komplette Spektrum der klassischen Architektenleistungen aller Leistungsphasen der HOAI.<br>Diese umfassen:</p>
 					<ul>
