--- a/index.html
+++ b/index.html
@@ -143,37 +143,12 @@
     <div class="container scrollspy" id="Leistungen" >
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
-        <img src="images/nachher-gross.jpg">
- <!-- vorher nachher bild
- blur?
- css
-img {
-    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
-    filter: blur(5px);
-}
- cross fading images
-		  <div>
-		  <a href="TARGET URL GOES HERE">
-			<img src="URL OF FIRST IMAGE GOES HERE"
-				 onmouseover="this.src='URL OF SECOND IMAGE GOES HERE';"
-				 onmouseout="this.src='URL OF FIRST IMAGE GOES HERE';">
-			</img>
-		  </a>
-		  </div>
-
- oder
-
-		<a href="https://tekeye.uk"><img src="images/home.png" alt="Tek Eye Home" onmouseover="this.src='images/home-g.png';" onmouseout="this.src='images/home.png';"/></a>
-
- oder
-
-https://www.templatemonster.com/blog/create-rollover-image-effect-css-html-js/
-
-oder
-
-https://stackoverflow.com/questions/34767900/jquery-replace-image-on-hover
-
- -->
+        <div id="bildgroesse"> <!--codepen code-->
+    				<div class="before-and-after"><img class="subject-before" src="./images/vorher-klein.jpg"/>
+    				  <div class="subject-scraper"><img class="subject-after" src="./images/nachher-klein.jpg"/>
+    				  </div>
+    				</div>
+    		</div>
         <span class="leistungstext">
           <p>Wir bieten das komplette Spektrum der klassischen Architektenleistungen aller Leistungsphasen der HOAI.<br>Diese umfassen:</p>
     			<ul>
