--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
         <div class="formularteil">
           <h3>Anrede:</h3>
           <select class="eingabefeld " id="anrede" name="Anrede" required>
-            <option value="">Herr</option>
+            <option value="">Anrede</option>
+            <option value="Herr">Herr</option>
             <option value="Frau">Frau</option>
           </select>
         </div>
