letzter Upload alles validierte Dateien

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img id="HWFLogo" src="images/Logo_neu_Schrift_weiß.png" alt="Logo">
         <!--Menü-->
         <img id="menubutton" src="images/menu.png" alt="menubutton">
-      <navbar id="Menü">
+      <nav id="Menü">
         <ul>
           <li><a href="#Slider" class="active">Start</a></li>
           <li><a href="#Referenzen">Referenzen</a></li>
@@ -37,10 +37,8 @@
           <li><a href="#Karriere">Karriere</a></li>
           <li><a href="#Impressum">Impressum</a></li>
         </ul>
-      </navbar>
+      </nav>
     </div>
-
-
   </header>
   <main>
 
@@ -55,11 +53,12 @@
 				</div>
 				<div>
           <img src="images/slider3.jpg" alt="Slider 3">
-	  </div>
-	</div>
+	      </div>
+	     </div>
+     </div>
 
 <!-- ---------------------------------------------------REFERENZEN-------------------------------------  -->
-<!--class="container" - rausgenommen-->
+
     <div  id="Referenzen" class="scrollspy">
       <div class="banner">
 	      <h2>Referenzen</h2>
@@ -144,12 +143,12 @@
       <h2>Leistungen</h2>
       <div class="nichtbreiter">
         <div id="bildgroesse"> <!--codepen code-->
-    				<div class="before-and-after"><img class="subject-before" src="./images/vorher-klein.jpg"/>
-    				  <div class="subject-scraper"><img class="subject-after" src="./images/nachher-klein.jpg"/>
+    				<div class="before-and-after"><img class="subject-before" src="./images/vorher-klein.jpg" alt="vorher">
+    				  <div class="subject-scraper"><img class="subject-after" src="./images/nachher-klein.jpg" alt="nachher">
     				  </div>
     				</div>
     		</div>
-        <span class="leistungstext">
+        <div class="leistungstext">
           <p>Wir bieten das komplette Spektrum der klassischen Architektenleistungen aller Leistungsphasen der HOAI.<br>Diese umfassen:</p>
     			<ul>
     			  <li>Entwurf</li>
@@ -160,7 +159,7 @@
     			  <li>Energetische Sanierung</li>
     			  <li>Projektentwicklung</li>
     			</ul>
-        </span>
+        </div>
       </div>
     </div>
 
